--- a/templates/app1/addexpense.html
+++ b/templates/app1/addexpense.html
@@ -120,7 +120,7 @@
                                 <option value="[JK] Jammu and Kashmir">[JK] Jammu and Kashmir</option>
                                 <option value="[JH] Jharkhand">[JH] Jharkhand</option>
                                 <option value="[KA] Karnataka">[KA] Karnataka</option>
-                                <option value="[KL] Kerala">[KL] Kerala</option>
+                                <option value="Kerala">[KL] Kerala</option>
                                 <option value="[CG] Chhattisgarh">[CG] Chhattisgarh</option>
                                 <option value="[DNH] Dadra and Nagar Haveli">[DNH] Dadra and Nagar</option>
                                 <option value="[LA] Ladakh">[LA] Ladakh</option>
