--- a/templates/app1/editpurchasedebit.html
+++ b/templates/app1/editpurchasedebit.html
@@ -283,6 +283,24 @@
                                     </tr>
                                     <tr>
                                     <tr>
+                                        <th class="text-center">CGST</th>
+                                        <td class="text-center"><input type="number" name='cgst'
+                                                                       id="cgst" value="{{ pdebt.cgst }}"
+                                                                       class="form-control" readonly/></td>
+                                    </tr>
+                                    <tr>
+                                        <th class="text-center">SGST</th>
+                                        <td class="text-center"><input type="number" name='sgst'
+                                                                       id="sgst" value="{{ pdebt.sgst }}"
+                                                                       class="form-control" readonly/></td>
+                                    </tr>
+                                    <tr>
+                                        <th class="text-center">IGST</th>
+                                        <td class="text-center"><input type="number" name='igst'
+                                                                       id="igst" value="{{ pdebt.igst }}"
+                                                                       class="form-control" readonly/></td>
+                                    </tr>
+                                    <tr>
                                         <th class="text-center">Tax Amount</th>
                                         <td class="text-center"><input type="number" name='taxamount'
                                                                        id="tax_amount" value="{{ pdebt.taxamount }}"
