--- a/templates/app1/addpurchasepymnt.html
+++ b/templates/app1/addpurchasepymnt.html
@@ -54,12 +54,12 @@
                                     <select name="depto" id="" class="form-control" style="width: 95%;">
                                         <option value="Bank">Bank</option>
                                         <option disabled>Cash</option>
-                                        <option value="Petty Cash">Petty Cash</option>
+                                        <option value="Petty Cash" selected>Petty Cash</option>
                                         <option value="Undeposited Funds">Undeposited Funds</option>
                                         <!-- {% for acc in accoun %}
                                             <option value="{{ acc.name }}">{{ acc.name }}</option>
                                         {% endfor %} -->
-                                        <option value="Deferred CGST">Deferred CGST</option>
+                                        <!-- <option value="Deferred CGST">Deferred CGST</option>
                                         <option value="Deferred GST Input Credit">Deferred GST Input Credit</option>
                                         <option value="Deferred IGST">Deferred IGST</option>
                                         <option value="Deferred Krishi Kalyan Cess Input Credit">Deferred Krishi
@@ -77,7 +77,7 @@
                                         <option value="Prepaid Insurance">Prepaid Insurance</option>
                                         <option value="Service Tax Refund">Service Tax Refund</option>
                                         <option value="TDS Receivable">TDS Receivable</option>
-                                        <option value="Uncategorised Asset">Uncategorised Asset</option> 
+                                        <option value="Uncategorised Asset">Uncategorised Asset</option>  -->
                                     </select>
                                     <a href="{% url 'paymentcoacreate' %}"><button type="button" class="btn btn-outline-secondary ml-1">+</button></a>
                                 </div>
@@ -91,6 +91,8 @@
                         </div>
                         <div class="row">
                             <div class="col-md-4">
+                                <label class="col-form-label">Reference</label>
+                                <input type="text" name="reference" class="form-control">
                             </div>
                             <div class="col-md-4"></div>
                             <div class="col-md-4">
