--- a/templates/app1/addbilling.html
+++ b/templates/app1/addbilling.html
@@ -2692,7 +2692,7 @@
             let z=Math.round(tcs)
             disc0=discount
             
-            var amount =taxamount + total + tcs 
+            var amount =taxamount + total - tcs 
             let x =Math.round(amount)
             let y =Math.round(x-disc0)
             
