--- a/templates/app1/coa.html
+++ b/templates/app1/coa.html
@@ -20,12 +20,8 @@
                         <div class="col-md-5"></div>
                         <div class="col-md-2"></div>
                         <div class="btn-group col-md-3 w-75">
-                            <button type="button" class="btn btn-outline-info h-75"><a href="{% url 'balancesheet' %}">Run
-                                Report</a></button>
-                            <button type="button" class="btn btn-outline-info h-75"><a href="#"
-                                                                                       data-target="#newaccmodel"
-                                                                                       data-toggle="modal">New</a>
-                            </button>
+                            <a role="button" class="btn btn-outline-info h-75" style="color: #fff;" href="{% url 'balancesheet' %}">Run Report</a>
+                            <a role="button" style="color: #fff;" class="btn btn-outline-info h-75" data-target="#newaccmodel" data-toggle="modal">New</a>
                             <button type="button"
                                     class="btn btn-outline-info h-75 dropdown-toggle dropdown-toggle-split"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -78,24 +74,45 @@
                                                         </div>
                                                         <div class="col-md-6">
                                                             <label for="name">*Name</label>
-                                                            <input name="name" id="name"
-                                                                   class="custom-select-md form-control w-100"> required
+                                                            <input name="name" id="name" required
+                                                                   class="custom-select-md form-control w-100"> 
                                                         </div>
+                                                        
                                                     </div>
                                                     <div class="row mt-2 mb-2">
-                                                        
-                                                        <div class="col-md-6">
-                                                            <label for="description">Description</label>
-                                                            <input type="text" name="description" class="form-control">
+                                                        <div class="col-md-6 mt-2">
+                                                            <label for="balance">Credit</label>
+                                                            <input type="text" name="balance" id="balance"
+                                                                   class="form-control" >
+                                                        </div>
+                                                        <div class="col-md-6 mt-2">
+                                                            <label for="balance">Debit</label>
+                                                            <input type="text" name="dbbalance" id="balance"
+                                                                   class="form-control">
                                                         </div>
                                                     </div>
                                                     <div class="row">
-                                                        <div class="col-md-6">
-                                                    <textarea class="form-control mt-2" name="Type details" cols="20"
-                                                              rows="10" style="font-size: small;" disabled>Use Cash and Cash Equivalents to track cash or assets that can be converted into cash immediately. For example, marketable securities and Treasury bills.</textarea>
+                                                        <div class="col-md-6 mt-2">
+                                                            <textarea class="form-control mt-2" name="Type details" cols="20"
+                                                            rows="10" style="font-size: small;" disabled>Use Cash and Cash Equivalents to track cash or assets that can be converted into cash immediately. For example, marketable securities and Treasury bills.</textarea>
                                                         </div>
                                                         <div class="col-md-6 mt-2">
-                                                            <div class="form-check">
+                                                            <div class="mt-2">
+                                                                <div>
+                                                                    <label for="asof">as of</label>
+                                                                    <input type="date" name="asof" id="asof" class="form-control" value="{{ tod }}">
+                                                                </div>
+                                                            </div>
+                                                            <div class="mt-2">
+                                                                <label>Description</label>
+                                                            <textarea class="form-control" name="description" placeholder="Max. 500 Characters"></textarea>
+                                                            </div>
+                                                        </div>
+                                                    </div>        
+                                                    
+                                                        
+                                                        <!-- <div class="col-md-6 mt-2"> -->
+                                                            <!-- <div class="form-check">
                                                                 <div>
                                                                     <input class="form-check-input" name="issub"
                                                                            type="checkbox"
@@ -105,8 +122,8 @@
                                                                         Is sub-account
                                                                     </label>
                                                                 </div>
-                                                            </div>
-                                                            <div class="mt-2">
+                                                            </div> -->
+                                                            <!-- <div class="mt-2">
                                                                 <select name="gst" id="gst"
                                                                         class="custom-select-md form-control w-100"
                                                                         disabled="disabled">
@@ -257,8 +274,8 @@
                                                                     </option>
                                                                     <option value="Equity">Equity</option>
                                                                 </select>
-                                                            </div>
-                                                            <div class="mt-2">
+                                                            </div> -->
+                                                            <!-- <div class="mt-2">
                                                                 <label for="deftaxcode">Default Tax Code</label>
                                                                 <select name="deftaxcode" id="deftaxcode"
                                                                         class="custom-select-md form-control w-100">
@@ -291,35 +308,32 @@
                                                                     <option value="12.0% IGST">12.0% IGST</option>
                                                                     <option value="2.0% CST">2.0% CST</option>
                                                                 </select>
-                                                            </div>
-                                                            <div class="row mt-2" style="display: inline-flex;">
-                                                                <div class="col-md-6">
-                                                                    <label for="balance">Credit</label>
-                                                                    <input type="text" name="balance" id="balance"
-                                                                           class="form-control" >
-                                                                </div>
-                                                                <div class="col-md-6">
-                                                                    <label for="balance">Debit</label>
-                                                                    <input type="text" name="dbbalance" id="balance"
-                                                                           class="form-control" >
-                                                                </div>
-                                                                <div class="col-md-6">
-                                                                    <label for="asof">as of</label>
-                                                                    <input type="date" name="asof" id="asof"
-                                                                           class="form-control" value="{{ tod }}"
-                                                                           required >
-                                                                </div>
+                                                            </div> -->
+                                                            <!-- <div class="row mt-2" style="display: inline-flex;">
+                                                                
+                                                                
                                                              
-                                                            </div>
+                                                            </div> -->
 
+                                                        <!-- </div> -->
+                                                    <!-- </div> -->
+                                                    <div class="mt-3">
+                                                        <div class="row">
+                                                            <div class="col-md-5"></div>
+                                                            <div class="col-md-4"></div>
+                                                            <div class="col-md-3">
+                                                                <button type="submit" class="btn btn-outline-info">Save and
+                                                                    close
+                                                                </button>
+                                                            </div>
                                                         </div>
                                                     </div>
-                                                    <div class="mt-3">
-                                                        
+                                                    
+                                                    <!-- <div class="mt-3">
                                                         <button type="submit" class="btn btn-outline-light">Save and
                                                             close
                                                         </button>
-                                                    </div>
+                                                    </div> -->
                                                 </form>
                                             </div>
                                         </div>
@@ -336,7 +350,7 @@
                                 <th scope="col">TYPE</th>
                                
                                 <th scope="col">TAX RATE</th>
-                                <th scope="col">FINSYS BALANCE</th>
+                                <!-- <th scope="col">FINSYS BALANCE</th> -->
                                 <th scope="col">BANK BALANCE</th>
                                 <th scope="col">ACTION</th>
                             </tr>
@@ -349,7 +363,7 @@
                                         <td>{{ acoun.acctype }}</td>
                                         
                                         <td>{{ acoun.deftaxcode }}</td>
-                                        <td>{{ acoun.balance }}</td>
+                                        <!-- <td>{{ acoun.balance }}</td> -->
                                         <td></td>
                                         <td>
                                             <div class="dropdown">
