--- a/templates/app1/demo.html
+++ b/templates/app1/demo.html
@@ -4,55 +4,73 @@
     {% load static %}
     {% if user.is_authenticated %}
    
-    Values :
-
-    <input type="text" class="amount 1" value="2" />
+    <!DOCTYPE html>
+    <html>
     
-    <Hr>
-    <br>
-    Multiplier :
-    <input  type="text" class="tax 1" value="6" />
-    
-    <Hr>
-        <br>
-            Result :
-        
-        
-    <input type="text" class="calc_1" value="" />
-    
-
-
-    <script>
-      
-
-calculateResult();
-function calculateResult(){
-  var sameArr = [];
-  for(var i=1; i<= 3 ;i++)
-   {
-     var arrEle = document.getElementsByClassName("amount "+i);
-       sameArr.push(arrEle);
-       console.log(sameArr);
-   }
-   
-    for(var j=0;j< sameArr.length; j++)
-    {
-         var sumElement = $(".calc_" + (j+1));
-        var multyEleVal= document.getElementsByClassName("tax "+(j+1))[0].value;
-        var sum=multyEleVal;
-       
-        for(var z=0;z<sameArr[j].length; z++)
-        {
-             sum *= parseInt(sameArr[j][z].value) 
-            console.log("calc :"+sum)
+    <head>
+    <style>
+        .fixTableHead {
+        overflow-y: auto;
+        height: 110px;
         }
-         sumElement.val(sum);
-    }
-  
-
-}
-
-    </script>
+        .fixTableHead thead th {
+        position: sticky;
+        top: 0;
+        }
+        table {
+        border-collapse: collapse;		
+        width: 100%;
+        }
+        th,
+        td {
+        padding: 8px 15px;
+        border: 2px solid #529432;
+        }
+        th {
+        background: #ABDD93;
+        }
+    </style>
+    </head>
+    
+    <body>
+    <div class="fixTableHead">
+        <table>
+        <thead>
+            <tr>
+            <th>Col 1</th>
+            <th>Col 2</th>
+            </tr>
+        </thead>
+    
+        <tbody>
+            <tr>
+            <td>1.1</td>
+            <td>2.1</td>
+            </tr>
+            <tr>
+            <td>1.2</td>
+            <td>2.2</td>
+            </tr>
+            <tr>
+            <td>1.3</td>
+            <td>2.3</td>
+            </tr>
+            <tr>
+            <td>1.4</td>
+            <td>2.4</td>
+            </tr>
+            <tr>
+            <td>1.5</td>
+            <td>2.5</td>
+            </tr>
+        </tbody>
+            
+        </table>
+    </div>
+    </body>
+    
+    </html>
+    
 
     {% endif %}
 {% endblock %}
