--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -416,7 +416,7 @@
                 <li><a href="{% url 'balancesheet' %}"><i class="bx bx-right-arrow-alt"></i>Balance
                     sheet</a>
                 </li>
-                <li><a href="{% url 'trial' %}"><i class="bx bx-right-arrow-alt"></i>Trial Balance</a>
+                <li><a href="{% url 'trial_balance' %}"><i class="bx bx-right-arrow-alt"></i>Trial Balance</a>
                 </li>
                 <li><a href="{% url 'accreceivables' %}"><i class="bx bx-right-arrow-alt"></i>Accounts
                     receivables</a>
