--- a/templates/app1/payment_view.html
+++ b/templates/app1/payment_view.html
@@ -113,7 +113,30 @@ hr {
     .widget-main {
         padding: 12px
     }
+    .table2
+    {
+        text-align: center;
+        padding-top: 6px;
+        font-size: 1.1em;
+        background-color:azure
+       
+    }
     
+    .table-head
+    {
+        color: rgb(52, 49, 58);
+        
+       
+    }
+    .table2 .tbody tr 
+    {
+       margin-bottom: 3px;
+    }
+
+    .table{
+        
+        text-align: center;
+    }
    
     
 </style>
@@ -186,7 +209,7 @@ function uplodfile(){
         <div class="card radius-15">
             <div class="card-body">
                 <div class="card-title">
-                    <center><h2 class="mb-0">ESTIMATE VIEW</h2> <h4></h4></center>
+                    <center><h2 class="mb-0">PAYMENT VIEW</h2> <h4></h4></center>
                     <hr>
                 </div>
                 <div class="btn-group" style="float: right; ">
@@ -250,7 +273,7 @@ function uplodfile(){
             
                 <div class="my-5 page " size="A4" >
                     <div class="py-5">
-                        <div class="container">
+                        <div class="container" style="font-size: 14px;">
                           <div class="row hidden-md-up">
                             <div class="col-md-8" style="margin: auto;" >
                               <div class="card">
@@ -261,7 +284,7 @@ function uplodfile(){
                                                 <div class="col-sm-12 col-sm-offset-1" style="padding:20px;">
                                                     <div class="widget-box">
                                                         <div class="widget-header widget-header-large" >
-                                                            <h6 class="widget-title ">
+                                                            <h6 class="widget-title " style="margin-left: 40%;">
                                                                 Payment receipt
                                                             </h6>
                                         
@@ -280,7 +303,7 @@ function uplodfile(){
                                                                         </div>
                                         
                                                                         <div class="col-6">
-                                                                            <p style="font-size:10px;color:black;">{{cmp1.cname}}<br>
+                                                                            <p style="font-size:14px;color:black;">{{cmp1.cname}}<br>
                                                                               {{cmp1.pincode}}<br>
                                                                                  {{cmp1.state}}, <br>
                                                                                  {{cmp1.cemail}}
@@ -296,13 +319,13 @@ function uplodfile(){
                                        
                                                                 <div class="row col-12">
                                                                     <div class="col-8">
-                                                                        <p style="font-size:11px;color:black;">payment date : {{pay.paymdate | date:'d-m-Y'}}<br>
+                                                                        <p style="font-size:14px;color:black;">payment date : {{pay.paymdate | date:'d-m-Y'}}<br>
                                                                             payment mode : {{pay.pmethod}}<br>
                                                                             reference no. : {{pay.referno}}<br>
                                                                     
                                                                     </div>
                                                                     <div class="col-4">
-                                                                        <p style="background-color:green;align:center;">&nbsp &nbspAmount<br>
+                                                                        <p style="background-color:green;align:center; text-align: 14px;">&nbsp &nbspAmount<br>
                                                                             &nbsp ₹ {{pay.amtapply}}</p>
                                                                     </div>
                                                                    
@@ -310,20 +333,56 @@ function uplodfile(){
                                         
                                                                 <div class="hr hr8 hr-double hr-dotted"></div>
                                         
+                                                                
+
+                                                                <div class="row">
+                                                                    <div class="col-sm-12">
+                                                                        <table class="table table-resposive">
+                                                                            <thead class="table-head" style="background-color: aqua;" >
+                                                                                <tr >
+                                                                                  <th style="color: black; font-weight: bolder; font-size: 14px;" >Invoice Number</th>
+                                                                                  <th style="color: black; font-weight: bolder; font-size: 14px" >Invoice Date</th>
+                                                                                  <th style="color: black; font-weight: bolder; font-size: 14px">Invoice Amount</th>
+                                                                                  <th style="color: black; font-weight: bolder; font-size: 14px">Payment Amount</th>
+                                                                                  
+                                                                                  
+                                                                                  
+                                                                                </tr>
+                                                                            </thead>
+                                                                         
+                                                                            <tbody >
+                                                                                
+                                                                
+                                                                                {% for j in inv_dtl %}
+                                                                                <tr >
+                                                                                  <td style="color: black;font-size: 14px">{{j.invoiceno}}</td>
+                                                                                  <td style="color: black;font-size: 14px">{{j.invoicedate}}</td>
+                                                                                  <td style="color: black;font-size: 14px">{{j.grandtotal}}</td>
+                                                                                  <td style="color: black;font-size: 14px">{{pay.amtapply}}</td>
+                                                                                 
+                                                                                </tr>
+                                                                                {% endfor %}
+                                                                                
+                                                                                
+                                                                            </tbody>
+                                                                        </table>
+                                                                    </div>
+                                                                </div>
+
                                                                 <div class="row">
                                                                   
-                                                                        <div class="col-md-4" 
-                                                                        style="color:black;font-size:10px;margin-left:20px;">RECEIVED FROM
-                                                                    <br>
-                                                                    <p style="font-size:10px;color:black;"> {{custobject.street}},{{custobject.city}}<br>
+                                                                    <div class="col-md-4" 
+                                                                        style="color:black;font-size:14px;margin-left:20px;">RECEIVED FROM
+                                                                        <br>
+                                                                        <p style="font-size:14px;color:black;"> {{custobject.street}},{{custobject.city}}<br>
                                                                        {{custobject.pincode }}<br>
                                                                         {{custobject.state}},{{custobject.country}} <br>
                                                                          {{custobject.email}}
                                                                         <br>
                                                                          {{custobject.mobile}}<br></p>
+                                                                    </div>
                                                                 </div>
-                                                                </div>
-                                                        
+ 
                                                         </div>
                                                     </div>
                                                 </div>
@@ -337,6 +396,9 @@ function uplodfile(){
                             </div>
                            
                           </div>
+
+                        
+
                         </div>
                       </div>
                     </div>
